Major CMake cleanup/changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
+
+set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type.")
 project(SSVMenuSystem)
 
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -W -pedantic" CACHE STRING "" FORCE)
+set(CMAKE_CXX_FLAGS_DEBUG "-fno-omit-frame-pointer -g3 -gdwarf-2 -Og" CACHE STRING "" FORCE)
 set(SSVMENUSYSTEM_BUILD_SHARED_LIB FALSE CACHE BOOL "Build shared libraries.")
-set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type." FORCE)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" CACHE STRING "" FORCE)
 
 if(SSVMENUSYSTEM_BUILD_SHARED_LIB)
 	set(LIB_TYPE SHARED)
@@ -14,26 +16,17 @@ endif()
 set(SRC_DIR "src")
 set(INC_DIR "include")
 
-set(
-	SOURCES
-	${INC_DIR}/${PROJECT_NAME}/Menu/Category.h
-	${INC_DIR}/${PROJECT_NAME}/Menu/ItemBase.h
-	${INC_DIR}/${PROJECT_NAME}/Menu/Menu.h
-	${INC_DIR}/${PROJECT_NAME}/Items/Goto.h
-	${INC_DIR}/${PROJECT_NAME}/Items/Single.h
-	${INC_DIR}/${PROJECT_NAME}/Items/Slider.h
-	${INC_DIR}/${PROJECT_NAME}/Items/Toggle.h
-	${SRC_DIR}/${PROJECT_NAME}/Menu/Category.cpp
-	${SRC_DIR}/${PROJECT_NAME}/Menu/ItemBase.cpp
-	${SRC_DIR}/${PROJECT_NAME}/Menu/Menu.cpp
-	${SRC_DIR}/${PROJECT_NAME}/Items/Goto.cpp
-	${SRC_DIR}/${PROJECT_NAME}/Items/Single.cpp
-	${SRC_DIR}/${PROJECT_NAME}/Items/Slider.cpp
-	${SRC_DIR}/${PROJECT_NAME}/Items/Toggle.cpp
+file(GLOB SRC_LIST
+	"${INC_DIR}/${PROJECT_NAME}/*.h"
+	"${SRC_DIR}/${PROJECT_NAME}/*.cpp"
+	"${INC_DIR}/${PROJECT_NAME}/Menu/*.h"
+	"${SRC_DIR}/${PROJECT_NAME}/Menu/*.cpp"
+	"${INC_DIR}/${PROJECT_NAME}/Items/*.h"
+	"${SRC_DIR}/${PROJECT_NAME}/Items/*.cpp"
 )
 
 include_directories(${INC_DIR})
-add_library(${PROJECT_NAME} ${LIB_TYPE} ${SOURCES})
+add_library(${PROJECT_NAME} ${LIB_TYPE} ${SRC_LIST})
 
 if(SSVMENUSYSTEM_BUILD_SHARED_LIB)
 	set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX -d)
@@ -43,16 +36,9 @@ else()
 endif()
 
 if(WIN32)
-	install(TARGETS ${PROJECT_NAME}
-		RUNTIME DESTINATION bin
-		LIBRARY DESTINATION lib
-		ARCHIVE DESTINATION lib)
+	install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
 else()
-	install(TARGETS ${PROJECT_NAME}
-		RUNTIME DESTINATION lib
-		LIBRARY DESTINATION lib
-		ARCHIVE DESTINATION lib)
+	install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION lib LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
 endif()
 
-install(DIRECTORY ${INC_DIR}
-	DESTINATION .)
+install(DIRECTORY ${INC_DIR} DESTINATION .)
