--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type.")
 project(SSVMenuSystem)
 
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -W -pedantic" CACHE STRING "" FORCE)
-set(CMAKE_CXX_FLAGS_DEBUG "-fno-omit-frame-pointer -g3 -gdwarf-2 -Og" CACHE STRING "" FORCE)
-set(SSVMENUSYSTEM_BUILD_SHARED_LIB FALSE CACHE BOOL "Build shared libraries.")
+set(CMAKE_CXX_FLAGS_DEBUG "-fno-omit-frame-pointer -g3 -gdwarf-2 -O0" CACHE STRING "" FORCE)
+set(SSVMENUSYSTEM_BUILD_SHARED_LIB TRUE CACHE BOOL "Build shared libraries.")
 
 if(SSVMENUSYSTEM_BUILD_SHARED_LIB)
 	set(LIB_TYPE SHARED)
