--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ project(SSVMenuSystem)
 
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -W -pedantic" CACHE STRING "" FORCE)
 set(CMAKE_CXX_FLAGS_DEBUG "-fno-omit-frame-pointer -g3 -gdwarf-2 -O0" CACHE STRING "" FORCE)
-set(SSVMENUSYSTEM_BUILD_SHARED_LIB TRUE CACHE BOOL "Build shared libraries.")
 
-if(SSVMENUSYSTEM_BUILD_SHARED_LIB)
+set(BUILD_SHARED_LIB TRUE CACHE BOOL "Build shared libraries.")
+if(BUILD_SHARED_LIB)
 	set(LIB_TYPE SHARED)
 else()
 	set(LIB_TYPE STATIC)
@@ -15,20 +15,12 @@ endif()
 
 set(SRC_DIR "src")
 set(INC_DIR "include")
-
-file(GLOB SRC_LIST
-	"${INC_DIR}/${PROJECT_NAME}/*.h"
-	"${SRC_DIR}/${PROJECT_NAME}/*.cpp"
-	"${INC_DIR}/${PROJECT_NAME}/Menu/*.h"
-	"${SRC_DIR}/${PROJECT_NAME}/Menu/*.cpp"
-	"${INC_DIR}/${PROJECT_NAME}/Items/*.h"
-	"${SRC_DIR}/${PROJECT_NAME}/Items/*.cpp"
-)
+file(GLOB_RECURSE SRC_LIST "${INC_DIR}/*" "${SRC_DIR}/*")
 
 include_directories(${INC_DIR})
 add_library(${PROJECT_NAME} ${LIB_TYPE} ${SRC_LIST})
 
-if(SSVMENUSYSTEM_BUILD_SHARED_LIB)
+if(BUILD_SHARED_LIB)
 	set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX -d)
 else()
 	set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX -s-d)
