--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,4 @@ SSVCMake_setDefaultSettings()
 SSVCMake_setDefaultFlags()
 SSVCMake_setDefaultGlobs()
 SSVCMake_findExtlib(SSVUtils)
-
-add_library(HEADER_ONLY_TARGET STATIC ${SRC_LIST})
-set_target_properties(HEADER_ONLY_TARGET PROPERTIES LINKER_LANGUAGE CXX)
-
-install(DIRECTORY ${INC_DIR} DESTINATION .)
+SSVCMake_setAndInstallHeaderOnly()
