added missing vrm_pp dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ include(SSVCMake)
 SSVCMake_setDefaultSettings()
 SSVCMake_setDefaultFlags()
 SSVCMake_setDefaultGlobs()
+SSVCMake_findExtlib(vrm_pp)
 SSVCMake_findExtlib(SSVUtils)
 SSVCMake_setAndInstallHeaderOnly()
